--- a/step0040/pom.xml
+++ b/step0040/pom.xml
@@ -14,10 +14,10 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>2.16.0</log4j.version>
     </properties>
 
     <build>
@@ -57,8 +57,8 @@
 
             <!-- other libraries -->
             <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
         </dependencies>
@@ -66,8 +66,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
         </dependency>
     </dependencies>
 </project>
