--- a/step0040/pom.xml
+++ b/step0040/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
-        <log4j.version>2.16.0</log4j.version>
+        <log4j.version>2.17.0</log4j.version>
     </properties>
 
     <build>
@@ -27,6 +27,15 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>${exec-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>Execute</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>java</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                     <configuration>
                         <skip>true</skip>
                         <mainClass>de.conciso.starter.HelloWorld</mainClass>
