--- a/step0050/pom.xml
+++ b/step0050/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <log4j.version>2.16.0</log4j.version>
+        <log4j.version>2.17.0</log4j.version>
         <junit-jupiter.version>5.7.2</junit-jupiter.version>
         <assertj-core.version>3.20.2</assertj-core.version>
     </properties>
@@ -34,6 +34,15 @@
                         <skip>true</skip>
                         <mainClass>de.conciso.starter.HelloWorld</mainClass>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>Execute</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>java</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -46,14 +55,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
