--- a/step0100/pom.xml
+++ b/step0100/pom.xml
@@ -27,7 +27,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
-        <fabric8-maven-plugin.version>4.4.1</fabric8-maven-plugin.version>
+        <docker-maven-plugin.version>0.38.1</docker-maven-plugin.version>
     </properties>
 
     <build>
@@ -42,8 +42,8 @@
                 </plugin>
                 <plugin>
                     <groupId>io.fabric8</groupId>
-                    <artifactId>fabric8-maven-plugin</artifactId>
-                    <version>${fabric8-maven-plugin.version}</version>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>${docker-maven-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
