--- a/step0100/app/src/main/resources/application.properties
+++ b/step0100/app/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=passGeheim
 ## Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
