--- a/step0100/pom.xml
+++ b/step0100/pom.xml
@@ -28,6 +28,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
         <docker-maven-plugin.version>0.38.1</docker-maven-plugin.version>
+        <docker-image.openjdk>openjdk:11.0.13-slim-bullseye</docker-image.openjdk>
+        <docker-image.postgres>postgres:11.14-bullseye</docker-image.postgres>
     </properties>
 
     <build>
