--- a/step0100/docker/pom.xml
+++ b/step0100/docker/pom.xml
@@ -11,89 +11,178 @@
 
     <artifactId>docker</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                    <autoCreateCustomNetworks>true</autoCreateCustomNetworks>
-                    <showLogs>true</showLogs>
-                    <images>
-                        <image>
-                            <alias>java-starter</alias>
-                            <name>java-starter:latest</name>
-                            <build>
-                                <from>${docker-image.openjdk}</from>
-                                <ports>
-                                    <port>8080/tcp</port>
-                                </ports>
-                                <assembly>
-                                    <basedir>/app</basedir>
-                                    <inline>
-                                        <files>
-                                            <file>
-                                                <source>
-                                                    ..${file.separator}app${file.separator}target${file.separator}app-${project.version}.jar
-                                                </source>
-                                            </file>
-                                        </files>
-                                    </inline>
-                                </assembly>
-                                <entryPoint>
-                                    <shell>
-                                        java -jar /app/app-${project.version}.jar
-                                    </shell>
-                                </entryPoint>
-                            </build>
-                            <run>
-                                <dependsOn>
-                                    <container>db</container>
-                                </dependsOn>
-                                <network>
-                                    <name>java-starter-network</name>
+    <profiles>
+        <profile>
+            <id>custom_network</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                            <autoCreateCustomNetworks>true</autoCreateCustomNetworks>
+                            <showLogs>true</showLogs>
+                            <images>
+                                <image>
                                     <alias>java-starter</alias>
-                                </network>
-                                <ports>
-                                    <port>8080:8080</port>
-                                </ports>
-                                <env>
-                                    <DATABASE_CONNECTION_URL>jdbc:postgresql://db:5432/person</DATABASE_CONNECTION_URL>
-                                </env>
-                            </run>
-                        </image>
-                        <image>
-                            <alias>db</alias>
-                            <name>${docker-image.postgres}</name>
-                            <run>
-                                <network>
-                                    <name>java-starter-network</name>
+                                    <name>java-starter:latest</name>
+                                    <build>
+                                        <from>${docker-image.openjdk}</from>
+                                        <ports>
+                                            <port>8080/tcp</port>
+                                        </ports>
+                                        <assembly>
+                                            <basedir>/app</basedir>
+                                            <inline>
+                                                <files>
+                                                    <file>
+                                                        <source>
+                                                            ..${file.separator}app${file.separator}target${file.separator}app-${project.version}.jar
+                                                        </source>
+                                                    </file>
+                                                </files>
+                                            </inline>
+                                        </assembly>
+                                        <entryPoint>
+                                            <shell>
+                                                java -jar /app/app-${project.version}.jar
+                                            </shell>
+                                        </entryPoint>
+                                    </build>
+                                    <run>
+                                        <dependsOn>
+                                            <container>db</container>
+                                        </dependsOn>
+                                        <network>
+                                            <name>java-starter-network</name>
+                                            <alias>java-starter</alias>
+                                        </network>
+                                        <ports>
+                                            <port>8080:8080</port>
+                                        </ports>
+                                        <env>
+                                            <DATABASE_CONNECTION_URL>jdbc:postgresql://db:5432/person
+                                            </DATABASE_CONNECTION_URL>
+                                        </env>
+                                    </run>
+                                </image>
+                                <image>
                                     <alias>db</alias>
-                                </network>
-                                <ports>
-                                    <port>5432:5432</port>
-                                </ports>
-                                <env>
-                                    <POSTGRES_USER>java-starter</POSTGRES_USER>
-                                    <POSTGRES_PASSWORD>passGeheim</POSTGRES_PASSWORD>
-                                    <POSTGRES_DB>person</POSTGRES_DB>
-                                </env>
-                            </run>
-                        </image>
-                    </images>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>fabric8</id>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+                                    <name>${docker-image.postgres}</name>
+                                    <run>
+                                        <network>
+                                            <name>java-starter-network</name>
+                                            <alias>db</alias>
+                                        </network>
+                                        <ports>
+                                            <port>5432:5432</port>
+                                        </ports>
+                                        <env>
+                                            <POSTGRES_USER>java-starter</POSTGRES_USER>
+                                            <POSTGRES_PASSWORD>passGeheim</POSTGRES_PASSWORD>
+                                            <POSTGRES_DB>person</POSTGRES_DB>
+                                        </env>
+                                    </run>
+                                </image>
+                            </images>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>fabric8</id>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>host_network</id>
+            <activation>
+                <property>
+                    <name>env.PLATFORM</name>
+                    <value>arm</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                            <showLogs>true</showLogs>
+                            <images>
+                                <image>
+                                    <alias>db</alias>
+                                    <name>${docker-image.postgres}</name>
+                                    <run>
+                                        <network>
+                                            <mode>host</mode>
+                                        </network>
+                                        <env>
+                                            <POSTGRES_USER>java-starter</POSTGRES_USER>
+                                            <POSTGRES_PASSWORD>passGeheim</POSTGRES_PASSWORD>
+                                            <POSTGRES_DB>person</POSTGRES_DB>
+                                        </env>
+                                    </run>
+                                </image>
+                                <image>
+                                    <alias>java-starter</alias>
+                                    <name>java-starter:latest</name>
+                                    <build>
+                                        <from>${docker-image.openjdk}</from>
+                                        <ports>
+                                            <port>8080/tcp</port>
+                                        </ports>
+                                        <assembly>
+                                            <basedir>/app</basedir>
+                                            <inline>
+                                                <files>
+                                                    <file>
+                                                        <source>
+                                                            ..${file.separator}app${file.separator}target${file.separator}app-${project.version}.jar
+                                                        </source>
+                                                    </file>
+                                                </files>
+                                            </inline>
+                                        </assembly>
+                                        <entryPoint>
+                                            <shell>
+                                                java -jar /app/app-${project.version}.jar
+                                            </shell>
+                                        </entryPoint>
+                                    </build>
+                                    <run>
+                                        <network>
+                                            <mode>host</mode>
+                                        </network>
+                                        <env>
+                                            <DATABASE_CONNECTION_URL>jdbc:postgresql://localhost:5432/person</DATABASE_CONNECTION_URL>
+                                        </env>
+                                    </run>
+                                </image>
+                            </images>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>fabric8</id>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
