--- a/step0100/app/src/main/resources/application.properties
+++ b/step0100/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## PostgreSQL
-spring.datasource.url=${DATABASE_CONNECTION_URL:jdbc:postgresql://localhost:5432/person}
+spring.datasource.url=jdbc:postgresql://localhost:5432/person
 spring.datasource.username=java-starter
 spring.datasource.password=passGeheim
 
