--- a/step0100/docker/src/test/docker/docker-compose-host.yml
+++ b/step0100/docker/src/test/docker/docker-compose-host.yml
@@ -1,16 +1,15 @@
 version: '3'
 services:
   db:
+    network_mode: host
     image: postgres:11.14-bullseye
-    ports:
-      - 5432:5432
     environment:
       - POSTGRES_USER=java-starter
       - POSTGRES_PASSWORD=passGeheim
       - POSTGRES_DB=person
+      - PGPORT=5433
   java-starter:
+    network_mode: host
     image: java-starter:latest
-    ports:
-      - 8080:8080
     environment:
-      - DATABASE_CONNECTION_URL=jdbc:postgresql://db:5432/person
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5433/person
