--- a/step0110/pom.xml
+++ b/step0110/pom.xml
@@ -30,6 +30,7 @@
         <docker-maven-plugin.version>0.38.1</docker-maven-plugin.version>
         <docker-image.openjdk>openjdk:11.0.13-slim-bullseye</docker-image.openjdk>
         <docker-image.postgres>postgres:11.14-bullseye</docker-image.postgres>
+        <docker-image.keycloak>jboss/keycloak:16.1.0</docker-image.keycloak>
     </properties>
 
     <build>
