add user to realm

--- a/step0110/docker/pom.xml
+++ b/step0110/docker/pom.xml
@@ -20,6 +20,7 @@
                     <skip>false</skip>
                     <autoCreateCustomNetworks>true</autoCreateCustomNetworks>
                     <showLogs>true</showLogs>
+                    <containerNamePattern>%a</containerNamePattern>
                     <images>
                         <image>
                             <alias>java-starter</alias>
