--- a/step0110/app/src/main/resources/application.properties
+++ b/step0110/app/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+## Keycloak
+keycloak.auth-server-url=http://localhost:8081/auth
+keycloak.realm=java-starter-realm
+keycloak.resource=java-starter-client
+keycloak.principal-attribute=preferred_username
+keycloak.bearer-only: true
