--- a/step0110/app/src/main/resources/application.properties
+++ b/step0110/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/person
+spring.datasource.url=jdbc:postgresql://db:5432/person
 spring.datasource.username=java-starter
 spring.datasource.password=passGeheim
 
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 ## Keycloak
-keycloak.auth-server-url=${AUTH_URL:http://localhost:10080/auth}
+keycloak.auth-server-url=http://idm:8080/auth
 keycloak.realm=java-starter-realm
 keycloak.resource=java-starter-client
 keycloak.principal-attribute=preferred_username
