add calculator endpoint

--- a/step0110/app/src/main/resources/application.properties
+++ b/step0110/app/src/main/resources/application.properties
@@ -16,3 +16,6 @@ keycloak.realm=java-starter-realm
 keycloak.resource=java-starter-client
 keycloak.principal-attribute=preferred_username
 keycloak.bearer-only: true
+
+## Spring-Boot actuator
+management.endpoints.web.exposure.include=*
