--- a/person/app/src/main/resources/application.properties
+++ b/person/app/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=passGeheim
 ## Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 
 ## Keycloak
 keycloak.auth-server-url=http://idm:8080/auth
