--- a/step0050/app/pom.xml
+++ b/step0050/app/pom.xml
@@ -28,6 +28,14 @@
             <groupId>de.conciso.starter</groupId>
             <artifactId>domain-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
