--- a/step0040/pom.xml
+++ b/step0040/pom.xml
@@ -29,7 +29,7 @@
                     <version>${exec-maven-plugin.version}</version>
                     <configuration>
                         <skip>true</skip>
-                        <mainClass>de.conciso.starter.HelloWorld</mainClass>
+                        <mainClass>de.conciso.starter.Starter</mainClass>
                     </configuration>
                 </plugin>
             </plugins>
