--- a/sample/person/docker/src/test/docker/docker-compose.yml
+++ b/sample/person/docker/src/test/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB=person
   person:
     container_name: person
-    image: person:latest
+    image: person:local
     depends_on:
       - db-person
       - idm
