--- a/sample/auftrag/docker/pom.xml
+++ b/sample/auftrag/docker/pom.xml
@@ -24,7 +24,7 @@
                     <images>
                         <image>
                             <alias>auftrag</alias>
-                            <name>auftrag:latest</name>
+                            <name>auftrag:local</name>
                             <build>
                                 <from>${docker-image.openjdk}</from>
                                 <ports>
