--- a/sample/shop/docker/pom.xml
+++ b/sample/shop/docker/pom.xml
@@ -24,7 +24,7 @@
                     <images>
                         <image>
                             <alias>shop</alias>
-                            <name>shop:latest</name>
+                            <name>shop:local</name>
                             <build>
                                 <from>${docker-image.openjdk}</from>
                                 <ports>
