use property values for url of other services

--- a/sample/shop/app/src/main/resources/application.properties
+++ b/sample/shop/app/src/main/resources/application.properties
@@ -8,3 +8,7 @@ keycloak.bearer-only: true
 
 ## Spring-Boot actuator
 management.endpoints.web.exposure.include=*
+
+## other services
+service.person.url=http://person:8080/api/person
+service.auftrag.url=http://auftrag:8080/api/auftrag
