add authorization token forwarding

--- a/sample/shop/rest-api/pom.xml
+++ b/sample/shop/rest-api/pom.xml
@@ -14,6 +14,10 @@
     <dependencies>
         <dependency>
             <groupId>de.conciso.shop</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.conciso.shop</groupId>
             <artifactId>domain-api</artifactId>
         </dependency>
 
