--- a/sample/shop/pom.xml
+++ b/sample/shop/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
+        <module>common</module>
         <module>domain-api</module>
         <module>domain-core</module>
         <module>infrastructure</module>
@@ -60,6 +61,11 @@
     <dependencyManagement>
         <dependencies>
             <!-- our modules -->
+            <dependency>
+                <groupId>de.conciso.shop</groupId>
+                <artifactId>common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>de.conciso.shop</groupId>
                 <artifactId>domain-api</artifactId>
