--- a/sample/kubernetes/deployment/sample.yml
+++ b/sample/kubernetes/deployment/sample.yml
@@ -16,12 +16,12 @@ spec:
     spec:
       containers:
       - name: person-app
-        image: 'person:local'
+        image: 'master:32000/person:latest'
         env:
         - name: SPRING_DATASOURCE_URL
-          value: "jdbc:postgresql://replace_me:5434/person"
+          value: 'jdbc:postgresql://replace_me:5434/person'
         - name: KEYCLOAK_AUTH_SERVER_URL
-          value: "http://replace_me:8080/auth"
+          value: 'http://replace_me:8080/auth'
 ---
 kind: Service
 apiVersion: v1
@@ -51,12 +51,12 @@ spec:
     spec:
       containers:
       - name: auftrag-app
-        image: 'auftrag:local'
+        image: 'master:32000/auftrag:latest'
         env:
         - name: SPRING_DATASOURCE_URL
-          value: "jdbc:postgresql://replace_me:5433/auftrag"
+          value: 'jdbc:postgresql://replace_me:5433/auftrag'
         - name: KEYCLOAK_AUTH_SERVER_URL
-          value: "http://replace_me:8080/auth"
+          value: 'http://replace_me:8080/auth'
 ---
 kind: Service
 apiVersion: v1
@@ -86,10 +86,10 @@ spec:
     spec:
       containers:
       - name: shop-app
-        image: 'shop:local'
+        image: 'master:32000/shop:latest'
         env:
         - name: KEYCLOAK_AUTH_SERVER_URL
-          value: "http://replace_me:8080/auth"
+          value: 'http://replace_me:8080/auth'
 ---
 kind: Service
 apiVersion: v1
